--- a/book/01-introduction/sections/app-vs-web.adoc
+++ b/book/01-introduction/sections/app-vs-web.adoc
@@ -1,5 +1,7 @@
 == Expectation: App vs web
 
+There is different expectations between using an app and browsing a web site.
+
 .App
 - Get things done
 - Usability
@@ -13,7 +15,7 @@
 - Readability
 - Deep linking
 
-You won’t think that a website works in iPhone but not Android. But you will find apps working on 1 platform only, at most 2 platforms. On the other hands, you think you can use any device to see the website and get what information you want
+You will find apps working on 1 platform only, at most 2 platforms. But you won’t expect a website that works in iPhone and work in Android. We expect that we can use any device to see the website and get what information you want
 
 
 === Web for app?
@@ -23,7 +25,7 @@ But, we can combine both by taking their advantages and avoiding their weaknesse
 
 === The process of building native app vs web app
 
-the graph
+TODO: the graph
 
 Using the pure web technology to build app is fast.
 
