--- a/book/0x-web-accessibility/web-accessibility.adoc
+++ b/book/0x-web-accessibility/web-accessibility.adoc
@@ -1,6 +1,9 @@
-= Mobile Navigation
+= Web Accessibility
 :toc: left
 :linkcss:
+
+== Web Accessibility
+
 
 == Accessibility—Making the web inclusive
 
