--- a/book/react-pre-render.adoc
+++ b/book/react-pre-render.adoc
@@ -2,4 +2,4 @@
 
 Why we need to pre render the React component?
 
-That's for fallback for browsers that don't have JavaScript support.
+That's fallback for browsers that don't have JavaScript support.
