--- a/book/0x-web-accessibility/web-accessibility.adoc
+++ b/book/0x-web-accessibility/web-accessibility.adoc
@@ -2,12 +2,14 @@
 :toc: left
 :linkcss:
 
+We build the web for every one. That's why accessibility is an important topic.
+
 == Web Accessibility
 
 
 == Accessibility—Making the web inclusive
 
-One difference between web and app is that web pages should be designed to be inclusive. It doesn't and never lock into perticular platform. It's designed so that every one can get the information. This is why we need to handle accessibility in our web pages.
+One difference between web and app is that web pages should be designed to be inclusive. It doesn't and never lock into particular platform. It's designed so that every one can get the information. This is why we need to handle accessibility in our web pages.
 
 == ARIA roles
 
