--- a/book/0x-rain-or-not/rain-or-not.adoc
+++ b/book/0x-rain-or-not/rain-or-not.adoc
@@ -77,7 +77,7 @@ And here is the result of that API.
 
 === Code for rain
 
-According to the API doc: http://bugs.openweathermap.org/projects/api/wiki/Weather_Condition_Codes
+According to the http://bugs.openweathermap.org/projects/api/wiki/Weather_Condition_Codes[API doc]: 
 
 
 We check the "weather" code. When the code starts at 5, it rains.
