--- a/book/01-introduction/sections/prepare.adoc
+++ b/book/01-introduction/sections/prepare.adoc
@@ -1,8 +1,8 @@
 == How this course is constructed
 
-There are different individual topics that we are going to cover in this course. You can find the course entry point at http://page.sh/dsrt2015
+There are different individual topics that we are going to cover in this course. You can find the course entry point at http://dsrt2015.surge.sh
 
-The entry point provides the outline links to each individual topic. It also comes with a log to show the changes I have made from time to time.
+// DELETED: The entry point provides the outline links to each individual topic. It also comes with a log to show the changes I have made from time to time.
 
 == About this course
 
