--- a/book/draft.adoc
+++ b/book/draft.adoc
@@ -2,7 +2,7 @@
 Makzan <mak@makzan.net>
 v0.2, 2015-10-08
 
-
+This is an introduction course. We focus on how things should work. We won't learns a lot of in depth coding skill. But you need to know what is good enough , what is great and what is bad.
 
 
 == tapping area
@@ -49,11 +49,7 @@ NOTE: app gesture and touch handling is better
 
 
 
-== Android JavaScript performance
-Very poor.
-iPhone 5 level
 
-Expect it will be slow to run a heavy client side JavaScript framework in Android.
 
 == PhoneGap Build
 If you just need the web view wrapper.
