--- a/book/0x-desktop-web-app/0-desktop-web-app.adoc
+++ b/book/0x-desktop-web-app/0-desktop-web-app.adoc
@@ -4,6 +4,6 @@
 
 Using web technologies to build desktop application.
 
-include::sections/fluid.adoc[]
+include::fluid.adoc[]
 
-include::sections/introducing-electron.adoc[]
+include::introducing-electron.adoc[]
