--- a/book/02-user-interface-design/0-user-interface-design.adoc
+++ b/book/02-user-interface-design/0-user-interface-design.adoc
@@ -4,6 +4,8 @@
 
 It’s an art to design user interface for app.
 
+include::ui-in-different-platforms.adoc[]
+
 include::tapping-area.adoc[]
 
 include::mobile-navigation.adoc[]
