--- a/book/02-user-interface-design/mobile-navigation.adoc
+++ b/book/02-user-interface-design/mobile-navigation.adoc
@@ -3,20 +3,33 @@
 The strategy to make mobile navigation works.
 
 == Navigation difference between platform
-The difference is huge
-Windows, Android, iOS
-It's not about the style (Skeuomorphism or "flat", or depth)
-It's about the user habits.
-It's about the strategy (tabs on bottom, tabs at top, infinite canvas)
-It's about the hardware buttons that affects the software design
+
+- The difference is huge
+- Windows, Android, iOS
+- It's not about the style (Skeuomorphism or "flat", or depth)
+- It's about the user habits.
+- It's about the strategy (tabs on bottom, tabs at top, infinite canvas)
+- It's about the hardware buttons that affects the software design
 
 == Hamburger menu?
-Conclusion: avoid it.
+Conclusion: **Avoid it!**
+
 At least don't just put the hamburger menu there.
 
+== Tabs
+
+
+
 == Case study navigation—Facebook
-First 9 grid
-Then list view
-Then hamburger menu
-Then double hamburger menu
-Then removed main hamburger menu and back to tab
+
+1. First they invented the 9-grid navigation.
++
+image::images/facebook-9-grid.jpg[]
+1. Then list view
+1. Then hamburger menu
+1. Then double hamburger menu
++
+image::images/facebook-2-hamburger.png[]
+1. Then removed main hamburger menu and back to tab
++
+image::images/facebook-tabs.jpg[]
