--- a/book/01-introduction/app-vs-web.adoc
+++ b/book/01-introduction/app-vs-web.adoc
@@ -17,7 +17,7 @@ image::images/web-vs-app-ui.jpg[]
 - Readability
 - Deep linking
 
-You will find apps working on 1 platform only, at most 2 platforms. But you won’t expect a website that works in iPhone and work in Android. We expect that we can use any device to see the website and get what information you want
+You will find apps working on 1 platform only, at most 2 platforms. But you won’t expect a website that works in iPhone and don’t work in Android. We expect that we can use any device to see the website and get what information you want
 
 
 === Web for app?
