--- a/book/01-introduction/basecamp-hybrid.adoc
+++ b/book/01-introduction/basecamp-hybrid.adoc
@@ -8,3 +8,5 @@
 6. Then, moving more part that requires high performance info native.
 
 It's a process. A transition. It won't archive the current state at one step.
+
+image::images/campare-basecamp-web-ios.gif[]
