--- a/book/02-user-interface-design/mobile-navigation.adoc
+++ b/book/02-user-interface-design/mobile-navigation.adoc
@@ -18,18 +18,31 @@ At least don't just put the hamburger menu there.
 
 == Tabs
 
+image::images/tab1.jpg[]
+image::images/tab2.jpg[]
+image::images/tab3.jpg[]
+image::images/tab4.jpg[]
+
+.When there are more than 5 tabs.
+image::images/tabs-more.jpg[]
+
+.iOS allows editing tabs.
+image::images/edit-tabs.jpg[]
 
 
 == Case study navigation—Facebook
 
 1. First they invented the 9-grid navigation.
 +
+.9-grid navigation in original Facebook app.
 image::images/facebook-9-grid.jpg[]
 1. Then list view
 1. Then hamburger menu
 1. Then double hamburger menu
 +
+.Hamburger menu in Facebook app.
 image::images/facebook-2-hamburger.png[]
 1. Then removed main hamburger menu and back to tab
 +
+.Tab approach in the latest Facebook app.
 image::images/facebook-tabs.jpg[]
