--- a/book/02-user-interface-design/mobile-navigation.adoc
+++ b/book/02-user-interface-design/mobile-navigation.adoc
@@ -22,6 +22,7 @@ image::images/tab1.jpg[]
 image::images/tab2.jpg[]
 image::images/tab3.jpg[]
 image::images/tab4.jpg[]
+image::images/tab5.jpg[]
 
 .When there are more than 5 tabs.
 image::images/tabs-more.jpg[]
