--- a/book/0x-desktop-web-app/introducing-electron.adoc
+++ b/book/0x-desktop-web-app/introducing-electron.adoc
@@ -5,3 +5,7 @@ There are more and more desktop apps now actually builds on top of the web techn
 Electron combines both advantages of web technology and the Node.js package ecosystem.
 
 The large amount of Node.js packages and the system level API allows many possibilities. On the front end, the mature of web technology makes app designer easier to craft the interface and the view controllers.
+
+
+
+http://photonkit.com[Photon] provides user interface components to Electron based app.
