--- a/book/draft.adoc
+++ b/book/draft.adoc
@@ -1,11 +1,39 @@
 = DSRT 2015
 Makzan <mak@makzan.net>
-v0.2, 2015-10-08
+v0.3, 2015-10-16
 
 This is an introduction course. We focus on how things should work. We won't learns a lot of in depth coding skill. But you need to know what is good enough , what is great and what is bad.
 
 
+=== Further improvement
 
+
+
+Making a launch screen for your web app
+
+== Web app launching screen
+
+Make it the screen of the first screen without all the dynamic content.
+
+== distribution channels
+
+* PhoneGap build
+* Xcodd with web view
+* android studio with web view
+* CocoonJS
+
+== making the user interface like app
+
+* Touch and click delay
+* CSS framework
+** Ionic
+**
+* jQuery mobile
+Flexbox layout
+
+Tips: if you want to reuse the interface in cross platform, don't make it look like one platform. Don't make it look like iOS or android.
+
+So when you choose what CSS framework to use, avoid those that mimic the iOS or android.
 
 == Books to read and learn
 
