--- a/book/draft.adoc
+++ b/book/draft.adoc
@@ -5,6 +5,11 @@ v0.3, 2015-10-16
 This is an introduction course. We focus on how things should work. We won't learns a lot of in depth coding skill. But you need to know what is good enough , what is great and what is bad.
 
 
+== How fast your web application loads
+
+When using web technologies to create application, one key thing to make the web page really like an application is to remove the response time. This includes the response of the buttons tapping or using the interface. It also includes the loading time of the web page.
+
+https://speakerdeck.com/addyosmani/whats-new-in-chrome-devtools
 
 == distribution channels
 
