--- a/index.adoc
+++ b/index.adoc
@@ -13,11 +13,11 @@ This is the course material I created for the cross-platform development class. 
 
 link:dsrt-course-2015.html[Read one page version]
 
-1. link:0-introduction.html[]
-2. link:0-user-interface-design.html[]
-3. link:0-getting-sensor-value.html[]
-4. link:0-rain-or-not.html[]
-5. link:0-offline-and-storage.html[]
-6. link:0-react.html[]
-7. link:0-desktop-web-app.html[]
-8. link:0-web-accessibility.html[]
+1. link:0-introduction.html[Introduction]
+2. link:0-user-interface-design.html[User interface design]
+3. link:0-getting-sensor-value.html[Getting sensor value]
+4. link:0-rain-or-not.html[Rain or not]
+5. link:0-offline-and-storage.html[Offline and storage]
+6. link:0-react.html[React]
+7. link:0-desktop-web-app.html[Desktop web app]
+8. link:0-web-accessibility.html[Web Accessibility]
