--- a/index.adoc
+++ b/index.adoc
@@ -15,9 +15,10 @@ link:dsrt-course-2015.html[Read one page version]
 
 1. link:0-introduction.html[Introduction]
 2. link:0-user-interface-design.html[User interface design]
-3. link:0-getting-sensor-value.html[Getting sensor value]
-4. link:0-rain-or-not.html[Rain or not]
-5. link:0-offline-and-storage.html[Offline and storage]
-6. link:0-react.html[React]
-7. link:0-desktop-web-app.html[Desktop web app]
-8. link:0-web-accessibility.html[Web Accessibility]
+3. link:0-jquery-mobile.html[jQuery Mobile]
+4. link:0-getting-sensor-value.html[Getting sensor value]
+5. link:0-rain-or-not.html[Rain or not]
+6. link:0-offline-and-storage.html[Offline and storage]
+7. link:0-react.html[React]
+8. link:0-desktop-web-app.html[Desktop web app]
+9. link:0-web-accessibility.html[Web Accessibility]
